[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mainlayer-testing"
version = "0.1.0"
description = "Mock server and test helpers for Mainlayer payment infrastructure integrations"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mainlayer", "testing", "mock", "payments", "ai-agents"]
dependencies = [
    "flask>=3.0.0",
    "werkzeug>=3.0.0",
]

[project.optional-dependencies]
pytest = ["pytest>=7.0.0"]
requests = ["requests>=2.31.0"]
dev = [
    "pytest>=7.0.0",
    "requests>=2.31.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.9.0",
    "ruff>=0.4.0",
]

[project.entry-points."pytest11"]
mainlayer = "mainlayer_testing.pytest_plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/mainlayer_testing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
